--- a/gbp.html
+++ b/gbp.html
@@ -45,7 +45,7 @@
       background-color: #b47ede;
       color: white;
       cursor: pointer;
-      font-weight: bold;
+      font-weight: italic;
     }
 
     button:hover 
